Bug 1705688 - Port bug 1705509: Hide -moz-outline-radius behind a pref. r=mkmelin

--- a/mail/themes/windows/mail/downloads/aboutDownloads.css
+++ b/mail/themes/windows/mail/downloads/aboutDownloads.css
@@ -37,7 +37,6 @@
     background-clip: content-box;
     border-radius: 6px;
     outline: 1px solid rgb(124,163,206);
-    -moz-outline-radius: 3px;
     outline-offset: -2px;
   }
 }
